Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91788

Assert when removing a model from QConcatenateTablesProxyModel that is bound to a QSortFilterProxyModel

XMLWordPrintable

    • e287582cba74ddcfc67f83647e72c0b23bd99c36 (qt/qtbase/dev) 0497f16fa7fcbb6abc4e5aa6fed0f609fd3a7776 (qt/qtbase/6.1) 6bd89d122e488d83c3e9310cf102ef238de8ac00 (qt/qtbase/6.0) 25964161a369996fbee8ce1909a3d6995be44f41 (qt/tqtc-qtbase/5.15)

      Assert occurs in:

      ASSERT: "hasIndex(row, column, parent)" in file /qt/git/qtbase/src/corelib/itemmodels/qconcatenatetablesproxymodel.cpp, line 292
      

      and it fails because column is -1.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dfaure_kdab David Faure
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: